--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "brotli": "^1.3.3",
+    "express": "^4.18.1",
     "mongodb": "^4.8.0",
     "pako": "^2.0.4",
     "ws": "^8.8.1"
