--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "brotli": "^1.3.3",
     "express": "^4.18.1",
     "mongodb": "^4.8.0",
+    "nodejieba": "^2.6.0",
     "pako": "^2.0.4",
     "ws": "^8.8.1"
   }
