--- a/bilive-danmu-fe/package.json
+++ b/bilive-danmu-fe/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "file-saver": "^2.0.5",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2"
   },
